@@ -1,8 +1,12 @@
+2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
+	* pretty_plot.m: added exception handling to the changing of figure elements.
+
 2007-05-02  Kalpit Desai <kvdesai@email.unc.edu>
 	* slopper.m: Minor changes and a bit cleaning up.
 
 2007-04-02  Kalpit Desai <kvdesai@email.unc.edu>
 	* slopper.m: Fixed a bug, now works for both, positive and negative slopes.
+	
 2007-03-05  Kalpit Desai <kvdesai@email.unc.edu>
 	* slopper.m: Added a stand-alone utility to compute/fit slopes of curves.
 	Works for linear scale, log scale, and plots with overlayed curves.
